<resources>
    <string name="app_name">To Do List</string>

    <string name="action_settings">Settings</string>

    <string name="action_add">Add</string>
    <string name="title_hint">Tittle</string>
    <string name="description_hint">Description</string>
    <string name="idea_checkbox">Idea</string>
    <string name="important_checkbox">Important</string>
    <string name="todo_checkbox">To Do</string>
    <string name="cancel_button">Cancel</string>
    <string name="ok_button">OK</string>

    <string name="sound_checkbox">On or Off</string>
    <string name="settings_tittle">Settings</string>
    <string name="sound_tittle">Sound</string>
    <string name="animation_tittle">Animation Speed</string>
    <string name="rb_fast">Fast</string>
    <string name="rb_slow">Slow</string>
    <string name="rb_none">None</string>

    <string name="show_note">"Your note: "</string>
    <string name="add_note">Add new note</string>

    <string name="delete_note">Delete note</string>
    <string name="cancel_note">Cancel</string>
    <string name="ok_note">Delete</string>
</resources>
