<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

    <TextView
        android:id="@+id/text_view_Settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/settings_tittle"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/sound_tittle"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_Settings_title" />

    <CheckBox
        android:id="@+id/checkbox_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sound_checkbox"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@+id/text_view_sound"
        app:layout_constraintTop_toBottomOf="@+id/text_view_sound" />

    <TextView
        android:id="@+id/text_view_animation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/animation_tittle"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/checkbox_sound"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_sound" />

    <RadioGroup
        android:id="@+id/rb_animations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/text_view_animation"
        app:layout_constraintTop_toBottomOf="@+id/text_view_animation">

        <RadioButton
            android:id="@+id/rb_animation_slow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rb_fast"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <RadioButton
            android:id="@+id/rb_animation_fast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rb_slow"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <RadioButton
            android:id="@+id/rb_animation_none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rb_none"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </RadioGroup>
</android.support.constraint.ConstraintLayout>