<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <ImageView
        android:id="@+id/ImageViewImportant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        app:srcCompat="@drawable/baseline_warning_black_24" />

    <ImageView
        android:id="@+id/ImageViewTodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/ImageViewImportant"
        app:srcCompat="@drawable/baseline_check_box_outline_blank_black_24" />

    <ImageView
        android:id="@+id/ImageViewIdea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/ImageViewTodo"
        app:srcCompat="@drawable/baseline_wb_incandescent_black_24" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="75dp"
        android:text="@string/title_hint"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitle"
        android:layout_marginTop="35dp"
        android:text="@string/description_hint"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <Button
        android:id="@+id/btnOk"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDescription"
        android:layout_alignParentStart="true"
        android:layout_marginStart="162dp"
        android:layout_marginTop="333dp"
        android:text="@string/ok_button"
        android:textStyle="bold|italic" />
</RelativeLayout>